--- a/client/src/app/components/current-weather/current-weather.html
+++ b/client/src/app/components/current-weather/current-weather.html
@@ -1,15 +1,13 @@
 <div *ngIf="currentWeather" class="current-weather-card">
   <div class="main-info">
-    <img
-      [src]="'[https://openweathermap.org/img/wn/](https://openweathermap.org/img/wn/)' + currentWeather.weather[0].icon + '@2x.png'"
-      [alt]="currentWeather.weather[0].description" class="weather-icon">
-    <div class="temp">{{ currentWeather.main.temp | number:'1.0-0' }}°C</div>
+    <img [src]="currentWeather.weather[0].icon" [alt]="currentWeather.weather[0].description" class="weather-icon">
+    <div class="temp">{{ currentWeather.main.temp | number:'1.0-0' }}°F</div>
     <div class="description">{{ currentWeather.weather[0].description }}</div>
   </div>
   <div class="details">
     <div class="detail-item">
       <span>Feels like</span>
-      <span>{{ currentWeather.main.feels_like | number:'1.0-0' }}°C</span>
+      <span>{{ currentWeather.main.feels_like | number:'1.0-0' }}°F</span>
     </div>
     <div class="detail-item">
       <span>Humidity</span>
@@ -17,7 +15,7 @@
     </div>
     <div class="detail-item">
       <span>Wind</span>
-      <span>{{ currentWeather.wind.speed | number:'1.1-1' }} m/s</span>
+      <span>{{ currentWeather.wind.speed | number:'1.1-1' }} mph</span>
     </div>
     <div class="detail-item">
       <span>Pressure</span>
