--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -24,7 +24,7 @@
 
   <app-search (locationConfirmed)="handleLocationConfirmed($event)"></app-search>
 
-  <app-saved-locations [locations]="savedLocations" (locationSelected)="handleSelectLocation($event)"
+  <app-saved-locations (locationSelected)="handleSelectLocation($event)"
     (locationDeleted)="handleDeleteLocation($event)" />
 
   <div class="content-area">
